--- a/00_TSC_NN_Keras.ipynb
+++ b/00_TSC_NN_Keras.ipynb
@@ -294,7 +294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Build the Model in Keras</h2>"
+    "<h2>Build the Model with Keras</h2>"
    ]
   },
   {
@@ -427,9 +427,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Accuracy of the Model</h2>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "score, acc = model.evaluate(X_test_norm, Y_test_cat, batch_size=64, verbose=0)"
@@ -455,9 +464,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Predicted Classes</h2>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Y_predd = model.predict_classes(X_test_norm, batch_size=64, verbose=0)"
@@ -486,7 +504,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -507,7 +527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
