--- a/00_TSC_NN_Keras.ipynb
+++ b/00_TSC_NN_Keras.ipynb
@@ -430,7 +430,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Accuracy of the Model</h2>"
+    "<h2>Model Evaluation</h2>"
    ]
   },
   {
