--- a/01_TSC_CNN_Keras.ipynb
+++ b/01_TSC_CNN_Keras.ipynb
@@ -403,6 +403,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Predicted Classes</h2>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
